--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_about">Over</string>
     <string name="menu_help">Help</string>
     <string name="menu_all">Alles</string>
+    <string name="menu_apply">Pas sjabloon toe</string>
     <string name="menu_clear">Wissen</string>
     <string name="menu_app_launch">Uitvoeren</string>
     <string name="menu_app_settings">Applicatie details</string>
