--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_about">Về XPrivacy</string>
     <string name="menu_help">Trợ giúp</string>
     <string name="menu_all">Tất cả</string>
+    <string name="menu_apply">Apply template</string>
     <string name="menu_clear">Xóa</string>
     <string name="menu_app_launch">Chạy</string>
     <string name="menu_app_settings">Tùy chỉnh</string>
