--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_about">Quant a</string>
     <string name="menu_help">Ajuda</string>
     <string name="menu_all">Totes</string>
+    <string name="menu_apply">Apply template</string>
     <string name="menu_clear">Neteja</string>
     <string name="menu_app_launch">Executa</string>
     <string name="menu_app_settings">Configuració</string>
