--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_about">À propos</string>
     <string name="menu_help">Aide</string>
     <string name="menu_all">Tous</string>
+    <string name="menu_apply">Apply template</string>
     <string name="menu_clear">Tout effacer</string>
     <string name="menu_app_launch">Lancer</string>
     <string name="menu_app_settings">Infos sur l\'application</string>
