--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_about">Névjegy</string>
     <string name="menu_help">Help</string>
     <string name="menu_all">Minden</string>
+    <string name="menu_apply">Apply template</string>
     <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Indítás</string>
     <string name="menu_app_settings">Beállítások</string>
