--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_about">アプリ情報</string>
     <string name="menu_help">ヘルプ</string>
     <string name="menu_all">全て</string>
+    <string name="menu_apply">Apply template</string>
     <string name="menu_clear">消去</string>
     <string name="menu_app_launch">アプリを起動</string>
     <string name="menu_app_settings">設定</string>
