--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_about">Sobre</string>
     <string name="menu_help">Ajuda</string>
     <string name="menu_all">Tudo</string>
+    <string name="menu_apply">Apply template</string>
     <string name="menu_clear">Limpar</string>
     <string name="menu_app_launch">Iniciar</string>
     <string name="menu_app_settings">Detalhes da aplicação</string>
