--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_about">Om</string>
     <string name="menu_help">Help</string>
     <string name="menu_all">Alla</string>
+    <string name="menu_apply">Apply template</string>
     <string name="menu_clear">Rensa</string>
     <string name="menu_app_launch">Starta</string>
     <string name="menu_app_settings">Inställningar</string>
