--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_about">关于</string>
     <string name="menu_help">帮助</string>
     <string name="menu_all">全部</string>
+    <string name="menu_apply">Apply template</string>
     <string name="menu_clear">清除</string>
     <string name="menu_app_launch">启动</string>
     <string name="menu_app_settings">设置</string>
