--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="menu_about">About</string>
     <string name="menu_help">Help</string>
     <string name="menu_all">All</string>
+    <string name="menu_apply">Apply template</string>
     <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Launch</string>
     <string name="menu_app_settings">App details</string>
