--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -20,7 +20,7 @@
     <string name="menu_about">Über XPrivacy</string>
     <string name="menu_help">Hilfe</string>
     <string name="menu_all">Alles (beschränkt)</string>
-    <string name="menu_apply">Apply template</string>
+    <string name="menu_apply">Template (Vorlage) übernehmen</string>
     <string name="menu_clear">Nichts (beschränkt)</string>
     <string name="menu_app_launch">App öffnen</string>
     <string name="menu_app_settings">App-Info anzeigen</string>
@@ -32,10 +32,10 @@
     <string name="msg_restricted" formatted="false">%s beschränkt durch XPrivacy</string>
     <string name="msg_licensed" formatted="false">Lizenziert für: %s</string>
     <string name="msg_loading">Lade...</string>
-    <string name="msg_edit">Berühren Sie das App-Icon, um alle Berechtigungen zu bearbeiten</string>
+    <string name="msg_edit">Berühren Sie das App-Icon, um alle Berechtigungen zu bearbeiten.</string>
     <string name="msg_sure">Sind Sie sicher?</string>
     <string name="msg_done">Fertig</string>
-    <string name="msg_reboot">Geräte-Neustart erforderlich</string>
+    <string name="msg_reboot">Geräteneustart erforderlich</string>
     <string name="msg_random">Zufallswerte erzeugen</string>
     <string name="msg_random_boot">Zufallswerte bei Geräte-Neustart erzeugen</string>
     <string name="msg_first"><b>XPrivacy wurde unter größter Sorgfalt entwickelt und getestet. Dennoch kann nicht gewährleistet werden, 
@@ -71,12 +71,12 @@
     </plurals>
 
     <string name="title_fused">Nach Datennutzung filtern</string>
-    <string name="title_finternet">Nach Internet-Zugang filtern</string>
+    <string name="title_finternet">Nach Internetzugang filtern</string>
     <string name="title_fpermission">Nach Berechtigungen filtern</string>
-    <string name="title_frestricted">FNach Beschränkungen filtern</string>
-    <string name="title_fuser">Filter on user applications</string>
+    <string name="title_frestricted">Nach Beschränkungen filtern</string>
+    <string name="title_fuser">Nach Nutzer-Apps filtern</string>
     <string name="title_fsystem">Nach System-Apps filtern</string>
-    <string name="settings_serial">Serien-Nr.</string>
+    <string name="settings_serial">Seriennummer</string>
     <string name="settings_lat">Breitengrad</string>
     <string name="settings_lon">Längengrad</string>
     <string name="settings_mac">MAC-Adresse</string>
@@ -88,7 +88,7 @@
     <string name="settings_subscriber">Subscriber-ID</string>
     <string name="settings_ua">User-Agent (Browser)</string>
     <string name="settings_log">Debug-Log (erfordert Geräte-Neustart)</string>
-    <string name="help_application">App</string>
+    <string name="help_application">Legende</string>
     <string name="help_internet">hat Internet-Berechtigung</string>
     <string name="help_granted">hat Android-Berechtigung</string>
     <string name="help_used">hat diese Daten benutzt</string>
