--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -20,7 +20,7 @@
     <string name="menu_about">जानकारी</string>
     <string name="menu_help">मदद</string>
     <string name="menu_all">प्रत्येक</string>
-    <string name="menu_apply">Apply template</string>
+    <string name="menu_apply">टेम्पलेट लागू करें</string>
     <string name="menu_clear">साफ़ करे</string>
     <string name="menu_app_launch">चालू करे</string>
     <string name="menu_app_settings">App का विवरण</string>
@@ -74,8 +74,8 @@
     <string name="title_finternet">इन्टरनेट उपयोग पर फिल्टर करे</string>
     <string name="title_fpermission">अनुमति के द्वारा फिल्टर करे</string>
     <string name="title_frestricted">प्रतिबंध पर फिल्टर करे</string>
-    <string name="title_fuser">Filter on user applications</string>
-    <string name="title_fsystem">सिस्टम की Application पर फिल्टर करे</string>
+    <string name="title_fuser">उपयोगकर्ता की Applications पर फिल्टर करे</string>
+    <string name="title_fsystem">सिस्टम की Applications पर फिल्टर करे</string>
     <string name="settings_serial">क्रमांक#</string>
     <string name="settings_lat">अक्षांश</string>
     <string name="settings_lon">रेखांश</string>
