--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -33,7 +33,7 @@
     <string name="msg_licensed" formatted="false">licencija: %s</string>
     <string name="msg_loading">Palaukite...</string>
     <string name="msg_edit">Spustelėkite programos piktogramą norėdami redaguoti apribojimus</string>
-    <string name="msg_sure">Sutinkate?</string></string>
+    <string name="msg_sure">Sutinkate?</string>
     <string name="msg_done">Atlikta</string>
     <string name="msg_reboot">Privaloma perkrauti prietaisą!</string>
     <string name="msg_random">Atsitiktiniai duomenys</string>
