--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -27,8 +27,8 @@
     <string name="menu_app_store">Play 商店</string>
     <string name="menu_accounts">选择允许的帐号</string>
     <string name="menu_contacts">选择允许的联系人</string>
-    <string name="msg_new">新装</string>
-    <string name="msg_update">升级</string>
+    <string name="msg_new">新安装</string>
+    <string name="msg_update">已升级</string>
     <string name="msg_restricted" formatted="false">%s 被 XPrivacy 限制</string>
     <string name="msg_licensed" formatted="false">已授权给: %s</string>
     <string name="msg_loading">加载中</string>
@@ -74,8 +74,8 @@
     <string name="title_finternet">无联网权过滤</string>
     <string name="title_fpermission">无关权限过滤</string>
     <string name="title_frestricted">未勾限制过滤</string>
-    <string name="title_fuser">用户应用过滤</string>
-    <string name="title_fsystem">系统应用过滤</string>
+    <string name="title_fuser">显示用户应用</string>
+    <string name="title_fsystem">显示系统应用</string>
     <string name="settings_serial">序列号</string>
     <string name="settings_lat">纬度</string>
     <string name="settings_lon">经度</string>
